--- a/secretBlogBoot-admin/pom.xml
+++ b/secretBlogBoot-admin/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>secretBlogBoot-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.chenc.blog</groupId>
+            <artifactId>secretBlogBoot-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
