--- a/secretBlogBoot-common/pom.xml
+++ b/secretBlogBoot-common/pom.xml
@@ -20,6 +20,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!-- swagger2 -->
         <!-- spring-session -->
         <dependency>
             <groupId>org.springframework.session</groupId>
