--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-io.version>1.3.2</commons-io.version>
         <commons-net.version>3.3</commons-net.version>
+        <ant-version>1.9.4</ant-version>
         <flexmark.version>0.50.42</flexmark.version>
         <springfox-swagger.version>2.7.0</springfox-swagger.version>
     </properties>
