新增web工程,给vue项目提供后台接口

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>secretBlogBoot-Generation</module>
         <module>secretBlogBoot-file</module>
         <module>secretBlogBoot-api</module>
+        <module>secretBlogBoot-web</module>
     </modules>
     <packaging>pom</packaging>
 
