联调vue前端文章列表接口，支持mysql8.0版本

--- a/secretBlogBoot-common/pom.xml
+++ b/secretBlogBoot-common/pom.xml
@@ -111,7 +111,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>${mysql.version}</version>
+            <!--<scope>runtime</scope>-->
         </dependency>
         <!--druid依赖添加-->
         <dependency>
