--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <tomcat.version>8.5.34</tomcat.version>
         <excel4j.version>2.1.4-Final</excel4j.version>
         <mybatis.version>1.3.2</mybatis.version>
+        <mysql.version>8.0.16</mysql.version>
         <mapper.version>2.1.0</mapper.version>
         <pagehelper.version>1.2.3</pagehelper.version>
         <druid.version>1.1.10</druid.version>
@@ -66,7 +67,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>cn.chenc</groupId>
+                <groupId>cn.chenc.blog</groupId>
                 <artifactId>secretBlogBoot-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
