--- a/secretBlogBoot-common/src/main/resources/config/application-center-dev.yml
+++ b/secretBlogBoot-common/src/main/resources/config/application-center-dev.yml
@@ -5,9 +5,9 @@ spring:
   datasource:
     druid:
       connection-init-sqls: set names utf8mb4
-      driver-class-name: com.mysql.jdbc.Driver
+      driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/secretblogboot?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/secretblogboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT
     username: root
     password: 111111
   ####### Redis Config #######
